--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,8 @@ dependencies {
     // Jetpack DataStore for theme preferences
     implementation 'androidx.datastore:datastore-preferences:1.1.1'
     implementation 'androidx.compose.material:material-icons-extended'
+    implementation("io.coil-kt:coil-compose:2.5.0")
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.8.1"
 
     // Tests
     testImplementation 'junit:junit:4.13.2'
