workin chat one to one some fixes needed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,41 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.girlspace.app">
 
-    <!-- Permissions -->
+    <!-- Internet -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <!-- For push / local notifications (Android 13+ will still need runtime prompt) -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!-- Notifications (Android 13+) -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
+    <!-- Gallery + files (Android 13+) -->
+    <uses-permission
+        android:name="android.permission.READ_MEDIA_IMAGES"
+        android:required="false" />
+    <uses-permission
+        android:name="android.permission.READ_MEDIA_VIDEO"
+        android:required="false" />
+    <uses-permission
+        android:name="android.permission.READ_MEDIA_AUDIO"
+        android:required="false" />
+
+    <!-- Android 12 and below storage -->
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+
+    <!-- Camera + Audio -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+    <!-- Location (Play Store requires both coarse + fine) -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <!-- Camera hardware declaration to avoid warnings -->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:name=".GirlSpaceApp"
@@ -16,15 +47,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GirlSpace">
 
-        <!-- ✅ Facebook config -->
+        <!-- Facebook config -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <!-- Optional but recommended for some Facebook features -->
         <meta-data
             android:name="com.facebook.sdk.ClientToken"
             android:value="@string/facebook_client_token" />
+
+        <!-- FileProvider for camera capture -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.girlspace.app.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
         <activity
             android:name=".MainActivity"
@@ -36,6 +77,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Add your FirebaseMessagingService, other screens, etc -->
 
     </application>
 
