--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,26 @@ dependencies {
     implementation 'androidx.compose.material:material-icons-extended'
     implementation("io.coil-kt:coil-compose:2.5.0")
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.8.1"
+    // Media3 for audio playback
+    implementation "androidx.media3:media3-exoplayer:1.3.1"
+    implementation "androidx.media3:media3-ui:1.3.1"
+
+    // For camera (take photo)
+    implementation "androidx.camera:camera-core:1.3.2"
+    implementation "androidx.camera:camera-camera2:1.3.2"
+    implementation "androidx.camera:camera-lifecycle:1.3.2"
+    implementation "androidx.camera:camera-view:1.3.2"
+
+    // For picking images/videos/files
+    implementation "androidx.activity:activity-ktx:1.9.0"
+    implementation "androidx.activity:activity-compose:1.9.0"
+
+    // Emoji (modern emoji picker support)
+    implementation "androidx.emoji2:emoji2:1.4.0"
+    implementation "androidx.emoji2:emoji2-views-helper:1.4.0"
+
+    // Bottom sheet menus
+    implementation "androidx.compose.material3:material3:1.2.1"
 
     // Tests
     testImplementation 'junit:junit:4.13.2'
