--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,17 +14,13 @@ android {
         applicationId "com.girlspace.app"
         minSdk 24
         targetSdk 35
-
         versionCode 1
         versionName "0.1.0"
-
         vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
-        debug {
-            minifyEnabled false
-        }
+        debug { minifyEnabled false }
         release {
             minifyEnabled true
             shrinkResources true
@@ -39,17 +35,12 @@ android {
 
     kotlinOptions {
         jvmTarget = '17'
-
-        // 👉 This tells Kotlin to ignore the "metadata 2.1.0 vs 1.9.0" mismatch
         freeCompilerArgs += "-Xskip-metadata-version-check"
     }
 
-    buildFeatures {
-        compose true
-    }
+    buildFeatures { compose true }
 
     composeOptions {
-        // Compose compiler compatible with Kotlin 1.9.24
         kotlinCompilerExtensionVersion '1.5.14'
     }
 
@@ -59,10 +50,8 @@ android {
                     'META-INF/DEPENDENCIES',
                     'META-INF/LICENSE',
                     'META-INF/LICENSE.txt',
-                    'META-INF/license.txt',
                     'META-INF/NOTICE',
                     'META-INF/NOTICE.txt',
-                    'META-INF/notice.txt',
                     'META-INF/AL2.0',
                     'META-INF/LGPL2.1'
             ]
@@ -71,40 +60,57 @@ android {
 }
 
 dependencies {
-    // ---- Jetpack Compose BOM (stable, no AGP 8.6 requirement) ----
+
+    /* ------------------------------
+       Jetpack Compose BOM
+    -------------------------------- */
     def composeBom = platform('androidx.compose:compose-bom:2024.08.00')
     implementation composeBom
     androidTestImplementation composeBom
 
-    // Compose UI
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-
-    // Material 3
     implementation 'androidx.compose.material3:material3'
+    implementation "com.google.android.material:material:1.12.0"
+    implementation 'androidx.compose.material:material-icons-extended'
 
-    // View-system Material (for some widgets & theming attrs)
-    implementation 'com.google.android.material:material:1.12.0'
 
-    // Core AndroidX
+
+    /* ------------------------------
+       Core AndroidX
+    -------------------------------- */
     implementation 'androidx.core:core-ktx:1.15.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
     implementation 'androidx.activity:activity-compose:1.9.3'
+    implementation "androidx.activity:activity-ktx:1.9.3"
 
-    // Navigation
+    /* Navigation */
     implementation 'androidx.navigation:navigation-compose:2.8.4'
 
-    // Hilt
+    /* Hilt */
     implementation 'com.google.dagger:hilt-android:2.52'
     kapt 'com.google.dagger:hilt-compiler:2.52'
     implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
 
-    // Coil (images, avatars)
+    /* Permissions (Accompanist) */
+    implementation "com.google.accompanist:accompanist-permissions:0.34.0"
+
+    /* ------------------------------
+       Coil (Images & Avatar)
+    -------------------------------- */
     implementation 'io.coil-kt:coil-compose:2.7.0'
 
-    // ---- Firebase (Auth, Firestore, Storage, FCM, Analytics) ----
+    /* ------------------------------
+       MLKit (Correct / Latest)
+    -------------------------------- */
+    implementation "com.google.mlkit:vision-common:17.3.0"
+    implementation "com.google.mlkit:image-labeling:17.0.7"
+
+    /* ------------------------------
+       Firebase
+    -------------------------------- */
     implementation platform('com.google.firebase:firebase-bom:34.6.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
@@ -112,40 +118,43 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-analytics'
 
-    // Google sign-in
+    /* Google Login + Location */
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
-// Google Play Billing
+    implementation "com.google.android.gms:play-services-location:21.2.0"
+
+    /* Google Play Billing */
     implementation "com.android.billingclient:billing-ktx:6.2.1"
 
-    // Facebook SDK (you already wired the App ID)
+    /* Facebook SDK */
     implementation 'com.facebook.android:facebook-android-sdk:17.0.0'
-    // Jetpack DataStore for theme preferences
+
+    /* DataStore */
     implementation 'androidx.datastore:datastore-preferences:1.1.1'
-    implementation 'androidx.compose.material:material-icons-extended'
-    implementation("io.coil-kt:coil-compose:2.5.0")
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.8.1"
-    // Media3 for audio playback
-    implementation "androidx.media3:media3-exoplayer:1.3.1"
-    implementation "androidx.media3:media3-ui:1.3.1"
 
-    // For camera (take photo)
-    implementation "androidx.camera:camera-core:1.3.2"
-    implementation "androidx.camera:camera-camera2:1.3.2"
-    implementation "androidx.camera:camera-lifecycle:1.3.2"
-    implementation "androidx.camera:camera-view:1.3.2"
-
-    // For picking images/videos/files
-    implementation "androidx.activity:activity-ktx:1.9.0"
-    implementation "androidx.activity:activity-compose:1.9.0"
-
-    // Emoji (modern emoji picker support)
+    /* Emoji2 */
     implementation "androidx.emoji2:emoji2:1.4.0"
     implementation "androidx.emoji2:emoji2-views-helper:1.4.0"
 
-    // Bottom sheet menus
-    implementation "androidx.compose.material3:material3:1.2.1"
+    /* ------------------------------
+       CameraX (photo, attachments)
+    -------------------------------- */
+    implementation "androidx.camera:camera-core:1.3.3"
+    implementation "androidx.camera:camera-camera2:1.3.3"
+    implementation "androidx.camera:camera-lifecycle:1.3.3"
+    implementation "androidx.camera:camera-view:1.3.3"
 
-    // Tests
+    /* ------------------------------
+       Media3 (audio, video playback)
+    -------------------------------- */
+    implementation "androidx.media3:media3-exoplayer:1.3.1"
+    implementation "androidx.media3:media3-ui:1.3.1"
+
+    /* ------------------------------
+       Coroutines for Play Services
+    -------------------------------- */
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.8.1"
+
+    /* Testing */
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
