--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,21 @@
+// Top-level build.gradle (project)
+
 buildscript {
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        // Google services plugin (for Firebase, sign-in, etc.)
-        classpath 'com.google.gms:google-services:4.4.2'
-        // If you later add Crashlytics plugin in app/build.gradle, keep this:
-        // classpath 'com.google.firebase:firebase-crashlytics-gradle:3.0.2'
+        // Needed ONLY if you use Crashlytics
+        // classpath "com.google.firebase:firebase-crashlytics-gradle:3.0.2"
     }
 }
 
 plugins {
-    // Keep using AGP 8.2.2 (stable and matches your Gradle wrapper)
-    id 'com.android.application' version '8.2.2' apply false
-
-    // Kotlin plugin version: 1.9.24 → matches Compose compiler 1.5.14
-    id 'org.jetbrains.kotlin.android' version '1.9.24' apply false
-
-    // Hilt
-    id 'com.google.dagger.hilt.android' version '2.52' apply false
+    id("com.android.application") apply false
+    id("org.jetbrains.kotlin.android") apply false
+    id("com.google.dagger.hilt.android") apply false
+    id("com.google.gms.google-services") apply false
+    // Optional only if used in app module:
+    // id("com.google.android.libraries.mapsplatform.secrets-gradle-plugin") apply false
 }
