--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
             android:name="com.facebook.sdk.ClientToken"
             android:value="@string/facebook_client_token" />
 
-        <!-- FileProvider for camera/photo attachments -->
+        <!-- FileProvider for camera/photo + shared attachments -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.girlspace.app.fileprovider"
