--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,11 @@ dependencies {
     implementation "com.google.android.material:material:1.12.0"
     implementation 'androidx.compose.material:material-icons-extended'
     implementation "com.google.android.play:app-update:2.1.0"
+// ML Kit Image Labeling
+    implementation "com.google.mlkit:image-labeling:17.0.7"
+
+// If you DON'T already have this (you probably do, for Firebase .await()):
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3"
 
     /* ------------------------------
        Core AndroidX
