--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,16 +95,14 @@
             </intent-filter>
         </activity>
 
-        <!-- Optional: Firebase Messaging Service -->
-        <!--
+        <!-- ✅ Firebase Messaging Service (REQUIRED for push) -->
         <service
-            android:name=".notifications.GirlSpaceFirebaseMessagingService"
+            android:name=".notifications.GirlSpaceMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        -->
 
     </application>
 
