--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ plugins {
     id("org.jetbrains.kotlin.android") apply false
     id("com.google.dagger.hilt.android") apply false
     id("com.google.gms.google-services") apply false
+    id("com.google.firebase.crashlytics") version "3.0.6" apply false
+
     // Optional only if used in app module:
     // id("com.google.android.libraries.mapsplatform.secrets-gradle-plugin") apply false
 }
