--- a/settings.gradle
+++ b/settings.gradle
@@ -10,13 +10,16 @@ pluginManagement {
         id("com.android.application") version "8.2.2"
 
         // Kotlin plugin matching Compose compiler
-        id("org.jetbrains.kotlin.android") version "1.9.24"
+        id("org.jetbrains.kotlin.android") version "2.1.10"
+        id("org.jetbrains.kotlin.plugin.compose") version "2.1.10"
 
         // Hilt DI plugin
         id("com.google.dagger.hilt.android") version "2.52"
 
         // Firebase / Google services plugin
+        id("com.google.dagger.hilt.android") version "2.52"
         id("com.google.gms.google-services") version "4.4.2"
+        id("com.google.firebase.crashlytics") version "3.0.6"
 
         // Optional: Crashlytics (add only if needed in app-level build.gradle)
         // id("com.google.firebase.crashlytics") version "3.0.2"
