--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="fullSensor"
             android:theme="@style/Theme.GirlSpace">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
