--- a/app/build.gradle
+++ b/app/build.gradle
@@ -188,7 +188,7 @@ dependencies {
     -------------------------------- */
     implementation "androidx.media3:media3-exoplayer:1.3.1"
     implementation "androidx.media3:media3-ui:1.3.1"
-
+    implementation "androidx.media3:media3-datasource:1.3.1"
     /* ------------------------------
        Coroutines for Play Services
     -------------------------------- */
