--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "com.girlspace.app"
         minSdk 24
         targetSdk 35
-        versionCode 25
-        versionName "25.1.1"
+        versionCode 26
+        versionName "26.1.1"
         vectorDrawables.useSupportLibrary = true
     }
 // ✅ SIGNING CONFIGS (uses your gradle.properties)
@@ -110,6 +110,8 @@ dependencies {
     implementation "com.google.android.play:app-update:2.1.0"
 // ML Kit Image Labeling
     implementation "com.google.mlkit:image-labeling:17.0.7"
+    implementation "androidx.lifecycle:lifecycle-process:2.7.0"
+    implementation "androidx.biometric:biometric:1.1.0"
 
     /* ------------------------------
        Core AndroidX
