--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
     <uses-permission
         android:name="android.permission.READ_MEDIA_AUDIO"
         android:required="false" />
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <!-- optional for older devices -->
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 
     <!-- Android 12 and below storage -->
     <uses-permission
